<resources>
    <string name="app_name">RunningTracker</string>
    <string name="start">Start</string>
    <string name="stopButton">Stop</string>
    <string name="startButton">Start</string>
    <string name="pauseButton">Pause</string>
    <string name="paceheading">PACE</string>
    <string name="distanceheading">DISTANCE</string>
    <string name="timeheading">TIME</string>
    <string name="_0">0</string>
    <string name="_0_0">0\'0</string>
    <string name="track_your_run">Track your Run</string>
    <string name="run">Run</string>
    <string name="history">History</string>
    <string name="start_run">Start Run</string>
    <string name="track_your_runn">Track your Run</string>
    <string name="view_total">View Total</string>
    <string name="view_runs">View Runs</string>
    <string name="total_runs">Total Runs</string>
    <string name="text_kilometers">Text Kilometers</string>
    <string name="average_pace">Average Pace</string>
    <string name="average_distance">Average Distance</string>
    <string name="__0">0</string>
    <string name="_0_00">0\'0</string>
    <string name="_0__0">0.0</string>
    <string name="_0___0">0.0</string>
    <string name="textview">TextView</string>
    <string name="total_kilometers">Total Kilometers</string>
    <string name="overall_run_summay">Overall Run Summay</string>
    <string name="_0_000">0.0</string>
    <string name="_0_0000">0:0</string>
    <string name="totalrunn">totalRun</string>
    <string name="totalkmm">totalkm</string>
    <string name="average_pacee">Average Pace</string>
    <string name="monthh">Month</string>
    <string name="time">time</string>
    <string name="pace">pace</string>
    <string name="total_km">total km</string>
    <string name="day">Day</string>
    <string name="date">Date</string>
    <string name="_0_0text">0\'0</string>
    <string name="_0text">0</string>
    <string name="average_pace_text">average pace</string>
    <string name="total_running_text">total running</string>
    <string name="total_kilometerss_text">total kilometerss</string>
    <string name="_0_0_text">0:0</string>
    <string name="view_overall_summary">view Overall Summary</string>
    <string name="view_list_of_runs">View List of Runs</string>
    <string name="running">Running</string>

</resources>